k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: video-processor-gateway
  labels:
    name: video-processor-gateway
    project: video-processor
